--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=estoque
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/estoque
 spring.datasource.username=postgres
 spring.datasource.password=aluno
 spring.jpa.hibernate.ddl-auto=update
